# youtube-dl-cleanup

./: .gitignore  README.md
src/: CMakeLists.txt  CMakeSettings.json  youtubedl-cleanup.cpp
